# src/App/Handler/Account/AccountCreateHandler.php
@@ -1,0 +1,26 @@
+<?php declare(strict_types=1);
+
+namespace Stormannsgal\App\Handler\Account;
+
+use Fig\Http\Message\StatusCodeInterface as HTTP;
+use Laminas\Diactoros\Response\JsonResponse;
+use Psr\Http\Message\ResponseInterface;
+use Psr\Http\Message\ServerRequestInterface;
+use Psr\Http\Server\RequestHandlerInterface;
+use OpenApi\Attributes as OA;
+
+class AccountCreateHandler implements RequestHandlerInterface
+{
+    #[OA\Post(
+        path: '/api/account',
+        description: 'Create new Account',
+        summary: 'Create new Account',
+        tags: ['Account']
+    )]
+    #[OA\Response(response: HTTP::STATUS_OK, description: 'Success')]
+    #[OA\Response(response: HTTP::STATUS_UNAUTHORIZED, description: 'Unauthorized')]
+    public function handle(ServerRequestInterface $request): ResponseInterface
+    {
+        return new JsonResponse([], HTTP::STATUS_OK);
+    }
+}
